--- a/packages/constants/package.json
+++ b/packages/constants/package.json
@@ -4,10 +4,8 @@
   "license": "MIT",
   "type": "module",
   "files": ["dist/**"],
-  "main": "./dist/src/index.js",
-  "module": "./dist/src/index.js",
-  "source": "./src/index.ts",
-  "types": "./dist/src/index.d.ts",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "bench": "pnpm vitest bench --run --dir src",
     "build": "pnpm tsc",
