--- a/packages/math/tsconfig.json
+++ b/packages/math/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
-  "extends": "@hypergiant/typescript-config/tsc/dom/library-monorepo",
+  "extends": "@hypergiant/typescript-config/tsc/dom/library",
   "include": ["./src"],
   "exclude": ["node_modules", "**/*.bench.ts", "**/*.test.ts"],
   "compilerOptions": {
-    "outDir": "./dist"
+    "rootDir": "src",
+    "outDir": "dist"
   }
 }
