--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://turbo.build/schema.json",
+  "ui": "tui",
   "tasks": {
     "dev": {
       "cache": false,
@@ -8,11 +9,11 @@
     "lint": {},
     "bench": {},
     "test": {
-      "outputs": ["coverage/**"]
+      "outputs": ["coverage"]
     },
     "build": {
       "dependsOn": ["^build"],
-      "outputs": ["dist/**"]
+      "outputs": ["dist"]
     }
   }
 }
