--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
       - run: pnpm run build
   lint:
     runs-on: ubuntu-latest
-    needs: install
+    needs: install_and_build
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
@@ -44,7 +44,7 @@ jobs:
       - run: pnpm run lint
   test:
     runs-on: ubuntu-latest
-    needs: install
+    needs: install_and_build
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
