--- a/packages/formatters/package.json
+++ b/packages/formatters/package.json
@@ -4,14 +4,15 @@
   "license": "MIT",
   "type": "module",
   "files": ["dist/**"],
-  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "exports": {
+    ".": "./dist/index.js"
+  },
   "scripts": {
     "bench": "pnpm vitest bench --run --dir src",
     "build": "pnpm tsc",
     "dev": "pnpm tsc --watch",
-    "lint": "pnpm biome lint ./",
-    "test": "pnpm vitest --run --dir src"
+    "lint": "pnpm biome lint ./"
   },
   "devDependencies": {
     "@hypergiant/typescript-config": "workspace:*",
