--- a/packages/predicates/package.json
+++ b/packages/predicates/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hypergiant/validators",
+  "name": "@hypergiant/predicates",
   "version": "0.0.0",
   "license": "MIT",
   "type": "module",
