--- a/.syncpackrc
+++ b/.syncpackrc
@@ -8,7 +8,7 @@
   "source": [
     "package.json",
     "packages/*/package.json",
-    "apps/*/package.json"
+    "tooling/*/package.json"
   ],
   "versionGroups": [
     {
