--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,9 +12,12 @@ concurrency:
   cancel-in-progress: true
 jobs:
   checks:
+    name: Install, Build, Lint, and Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
       - uses: actions/cache@v4
         with:
           path: .turbo
