--- a/turbo.json
+++ b/turbo.json
@@ -9,6 +9,7 @@
     "lint": {},
     "bench": {},
     "test": {
+      "dependsOn": ["^build"],
       "outputs": ["coverage"]
     },
     "build": {
