--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,7 @@ jobs:
       - uses: pnpm/action-setup@v4
         with:
           version: ${{ env.RUNNER_PNPM_VERSION }}
+          run_install: false
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ env.RUNNER_NODE_VERSION }}
