fix: exclude type test files

--- a/packages/constants/tsconfig.json
+++ b/packages/constants/tsconfig.json
@@ -2,7 +2,7 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "extends": "@hypergiant/typescript-config/tsc/dom/library",
   "include": ["./src"],
-  "exclude": ["node_modules", "**/*.bench.ts", "**/*.test.ts"],
+  "exclude": ["node_modules", "**/*.bench.ts", "**/*.test.ts", "**/*.test-d.ts"],
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "dist"
