--- a/packages/websocket/tsconfig.json
+++ b/packages/websocket/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "extends": "@hypergiant/typescript-config/tsc/dom/library",
-  "exclude": ["node_modules", "**/*.bench.ts", "**/*.test.ts"],
+  "exclude": ["node_modules", "**/*.bench.ts", "**/*.test.ts", "**/*.test-d.ts"],
   "include": ["./src"],
   "compilerOptions": {
     "rootDir": "src",
