--- a/packages/math/tsconfig.json
+++ b/packages/math/tsconfig.json
@@ -2,9 +2,17 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "extends": "@hypergiant/typescript-config/tsc/dom/library",
   "include": ["./src"],
-  "exclude": ["node_modules", "**/*.bench.ts", "**/*.test.ts", "**/*.test-d.ts"],
+  "exclude": [
+    "node_modules",
+    "**/*.bench.ts",
+    "**/*.test.ts",
+    "**/*.test-d.ts"
+  ],
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "dist"
+    "outDir": "dist",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
