--- a/packages/predicates/package.json
+++ b/packages/predicates/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "type": "module",
-  "files": [
-    "dist/**"
-  ],
+  "files": ["dist/**"],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": "./dist/index.js"
