--- a/packages/web-worker/package.json
+++ b/packages/web-worker/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "type": "module",
-  "files": [
-    "dist/**"
-  ],
+  "files": ["dist/**"],
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
