--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
   pull_request:
     types: [opened, synchronize]
 env:
+  TURBO_TELEMETRY_DISABLED: 1
   RUNNER_NODE_VERSION: 18
   RUNNER_PNPM_VERSION: 9.11.0 # specified in root package.json
 concurrency:
