feat: iff code formatting (#28)
* feat: add in iff code formatting
* fix: weird bug with changeset script
* build: changeset file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,8 @@
   },
   "search.exclude": {
     "pnpm-lock.yaml": true
+  },
+  "[typescript]": {
+    "editor.defaultFormatter": "biomejs.biome"
   }
 }
