--- a/tooling/vitetest-config/package.json
+++ b/tooling/vitetest-config/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hypergiant/vitest-config",
   "version": "0.0.0",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "type": "module",
   "exports": {
     "./dom": "./dom.js",
