--- a/packages/web-worker/package.json
+++ b/packages/web-worker/package.json
@@ -1,11 +1,9 @@
 {
   "name": "@hypergiant/worker",
   "version": "0.0.0",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "type": "module",
-  "files": [
-    "dist/**"
-  ],
+  "files": ["dist/**"],
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
