--- a/tooling/biome-config/package.json
+++ b/tooling/biome-config/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hypergiant/biome-config",
   "version": "0.0.0",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "type": "module",
   "exports": {
     "./analyzer": "./analyzer.json",
