--- a/tooling/typescript-config/package.json
+++ b/tooling/typescript-config/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hypergiant/typescript-config",
   "version": "0.0.0",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "type": "module",
   "exports": {
     "./tsc": "./tsc/dom/app.json",
