feat: stub in core package (#26)
* feat: stub in fp lib

* refactor: remove the academic level files

To be re-added at a later date. Likely simplified.

* refactor: flatten the folder structure a little

* refactor: clean up combinators

* doc: make sure all array functions have docblocks

* doc: make sure all composition functions have a docblock

* docs: make sure all logical functions have docblocks

* docs: make sure all object functions have docblocks

* docs: make sure all utils have docblocks

* refactor: move two functions from core to predicates

* refactor: change some docs and imports

* chore: install core in predicate

* style: smol lint/format

* refactor: clean up some array types

* test: fix a copy paste test

* refactor: adjust some types

* refactor: more array tweaks

* refactor: tweaks some object fns

* refactor: change is nothing comparison

* refactor: rename param

* refactor: change return type

* refactor: rename A types

* build: adjust naming rule

* fix: type issue

* chore: install

* chore: add core to predicates

* feat: add back old indexer

* feat: turn on file writes

* fix: update biome command

* feat: check in generated file

* fix: update turbo config

* feat: add index script to packages

* fix: private exports comment

* feat: prep design system indexer

* chore: turn off indexing for now on design system

---------

Co-authored-by: Bryan Kizer <bryan.kizer@hypergiant.com>

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dev": "turbo dev",
     "format": "pnpm biome format . --write",
     "license": "pnpm zx scripts/license.mjs",
+    "indexer": "turbo index",
     "lint": "turbo lint",
     "test": "turbo test"
   },
@@ -30,6 +31,7 @@
     "@changesets/cli": "^2.27.8",
     "@hypergiant/biome-config": "workspace:*",
     "@ls-lint/ls-lint": "^2.2.3",
+    "@swc/core": "^1.7.28",
     "rimraf": "^5.0.10",
     "syncpack": "^13.0.0",
     "taze": "^0.16.9",
