--- a/turbo.json
+++ b/turbo.json
@@ -4,7 +4,8 @@
   "tasks": {
     "dev": {
       "cache": false,
-      "persistent": true
+      "persistent": true,
+      "dependsOn": ["index"]
     },
     "lint": {},
     "bench": {},
@@ -13,8 +14,11 @@
       "outputs": ["coverage"]
     },
     "build": {
-      "dependsOn": ["^build"],
+      "dependsOn": ["index", "^build"],
       "outputs": ["dist"]
+    },
+    "index": {
+      "outputs": ["src/index.ts"]
     }
   }
 }
