--- a/packages/predicates/package.json
+++ b/packages/predicates/package.json
@@ -13,7 +13,8 @@
     "build": "pnpm tsc",
     "dev": "pnpm tsc --watch",
     "lint": "pnpm biome lint ./",
-    "test": "pnpm vitest --run --dir src"
+    "test": "pnpm vitest --run --dir src",
+    "index": "pnpm zx ../../scripts/indexer.mjs packages/predicates"
   },
   "devDependencies": {
     "@hypergiant/typescript-config": "workspace:*",
@@ -23,6 +24,7 @@
     "vitest": "^2.1.1"
   },
   "dependencies": {
+    "@hypergiant/core": "workspace:*",
     "typescript": "^5.6.2"
   },
   "$schema": "https://json.schemastore.org/package",
