--- a/packages/web-worker/package.json
+++ b/packages/web-worker/package.json
@@ -10,7 +10,8 @@
     "bench": "pnpm vitest bench --run --dir src",
     "build": "pnpm tsc",
     "dev": "pnpm tsc --watch",
-    "lint": "pnpm biome lint ./"
+    "lint": "pnpm biome lint ./",
+    "index": "pnpm zx ../../scripts/indexer.mjs packages/web-worker"
   },
   "devDependencies": {
     "@hypergiant/typescript-config": "workspace:*",
