--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "license": "MIT",
   "type": "module",
-  "files": ["dist/**"],
+  "files": [
+    "dist/**"
+  ],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": "./dist/index.js"
@@ -18,11 +20,11 @@
   "devDependencies": {
     "@hypergiant/typescript-config": "workspace:*",
     "@hypergiant/vitest-config": "workspace:*",
-    "@vitest/coverage-istanbul": "^1.6.0",
-    "vitest": "^1.6.0"
+    "@vitest/coverage-istanbul": "^2.1.3",
+    "vitest": "^2.1.3"
   },
   "dependencies": {
-    "typescript": "^5.4.5"
+    "typescript": "^5.6.3"
   },
   "$schema": "https://json.schemastore.org/package",
   "author": "https://hypergiant.com",
