--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "license": "Apache-2.0",
   "type": "module",
-  "files": ["dist/**"],
+  "files": [
+    "dist/**"
+  ],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
@@ -29,9 +31,9 @@
     "index": "pnpm zx ../../scripts/indexer.mjs packages/design-system --barrels"
   },
   "devDependencies": {
-    "@hypergiant/biome-config": "workspace:*",
     "@fontsource/roboto-flex": "^5.1.0",
     "@fontsource/roboto-mono": "^5.1.0",
+    "@hypergiant/biome-config": "workspace:*",
     "@hypergiant/typescript-config": "workspace:*",
     "@hypergiant/vitest-config": "workspace:*",
     "@ladle/react": "^4.1.2",
@@ -45,15 +47,15 @@
     "@types/react": "^18.3.11",
     "@vanilla-extract/rollup-plugin": "^1.3.10",
     "@vanilla-extract/vite-plugin": "^4.0.16",
-    "@vitest/coverage-istanbul": "^2.1.1",
+    "@vitest/coverage-istanbul": "^2.1.3",
     "jsdom": "^25.0.1",
     "react-test-renderer": "^18.3.1",
     "rollup": "^4.24.0",
     "rollup-plugin-esbuild": "^6.1.1",
     "rollup-plugin-node-externals": "^7.1.3",
     "rollup-plugin-typescript-paths": "^1.5.0",
-    "vite": "^5.4.8",
-    "vitest": "^2.1.1"
+    "vite": "^5.4.9",
+    "vitest": "^2.1.3"
   },
   "dependencies": {
     "@hypergiant/converters": "workspace:*",
@@ -67,13 +69,13 @@
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
-    "react-aria": "^3.35.0",
-    "react-aria-components": "^1.4.0",
+    "react-aria": "^3.35.1",
+    "react-aria-components": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-querybuilder": "^7.7.0",
     "react-stately": "^3.33.0",
     "type-fest": "^4.26.1",
-    "typescript": "^5.6.2",
+    "typescript": "^5.6.3",
     "zod": "^3.23.8"
   },
   "$schema": "https://json.schemastore.org/package",
