--- a/packages/geo/package.json
+++ b/packages/geo/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "license": "Apache-2.0",
   "type": "module",
-  "files": ["dist/**"],
+  "files": [
+    "dist/**"
+  ],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": "./dist/index.js"
@@ -19,13 +21,13 @@
   "devDependencies": {
     "@hypergiant/typescript-config": "workspace:*",
     "@hypergiant/vitest-config": "workspace:*",
-    "@vitest/coverage-istanbul": "^2.1.1",
-    "vitest": "^2.1.1"
+    "@vitest/coverage-istanbul": "^2.1.3",
+    "vitest": "^2.1.3"
   },
   "dependencies": {
     "@hypergiant/converters": "workspace:*",
     "@hypergiant/predicates": "workspace:*",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.3"
   },
   "$schema": "https://json.schemastore.org/package",
   "author": "https://hypergiant.com",
