--- a/packages/converters/package.json
+++ b/packages/converters/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.0",
   "license": "Apache-2.0",
   "type": "module",
-  "files": [
-    "dist/**"
-  ],
+  "files": ["dist/**"],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": "./dist/index.js"
@@ -14,9 +12,9 @@
     "bench": "pnpm vitest bench --run --dir src",
     "build": "pnpm tsc",
     "dev": "pnpm tsc --watch",
+    "index": "pnpm zx ../../scripts/indexer.mjs packages/converters",
     "lint": "pnpm biome lint ./",
-    "test": "pnpm vitest --run --dir src",
-    "index": "pnpm zx ../../scripts/indexer.mjs packages/converters"
+    "test": "pnpm vitest --run --dir src"
   },
   "devDependencies": {
     "@hypergiant/typescript-config": "workspace:*",
