--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,9 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "extends": "@hypergiant/typescript-config/tsc/dom/library",
-  "include": [
-    "./src"
-  ],
+  "include": ["./src"],
   "exclude": [
     "node_modules",
     "**/*.bench.ts",
@@ -14,9 +12,7 @@
     "rootDir": "src",
     "outDir": "dist",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./src/*"]
     }
   }
 }
