--- a/packages/formatters/package.json
+++ b/packages/formatters/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.0",
   "license": "Apache-2.0",
   "type": "module",
-  "files": [
-    "dist/**"
-  ],
+  "files": ["dist/**"],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": "./dist/index.js"
@@ -14,8 +12,8 @@
     "bench": "pnpm vitest bench --run --dir src",
     "build": "pnpm tsc",
     "dev": "pnpm tsc --watch",
-    "lint": "pnpm biome lint ./",
-    "index": "pnpm zx ../../scripts/indexer.mjs packages/formatters"
+    "index": "pnpm zx ../../scripts/indexer.mjs packages/formatters",
+    "lint": "pnpm biome lint ./"
   },
   "devDependencies": {
     "@hypergiant/typescript-config": "workspace:*",
