--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "license": "Apache-2.0",
+  "repository": "gohypergiant/standard-toolkit.git",
   "scripts": {
     "bench": "turbo bench",
     "build": "turbo build",
@@ -42,6 +43,7 @@
   },
   "$schema": "https://json.schemastore.org/package",
   "author": "https://hypergiant.com",
+  "bugs": "https://github.com/gohypergiant/standard-toolkit/issues",
   "engines": {
     "node": ">=22",
     "pnpm": ">=9"
