--- a/packages/constants/package.json
+++ b/packages/constants/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@hypergiant/constants",
   "version": "0.1.0",
+  "private": false,
   "license": "Apache-2.0",
   "type": "module",
   "files": [
@@ -28,5 +29,8 @@
   },
   "$schema": "https://json.schemastore.org/package",
   "author": "https://hypergiant.com",
+  "publishConfig": {
+    "access": "public"
+  },
   "sideEffects": false
 }
