--- a/tooling/biome-config/package.json
+++ b/tooling/biome-config/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@hypergiant/biome-config",
   "version": "0.1.0",
+  "private": false,
   "license": "Apache-2.0",
   "type": "module",
   "exports": {
@@ -13,5 +14,8 @@
   },
   "$schema": "https://json.schemastore.org/package",
   "author": "https://hypergiant.com",
+  "publishConfig": {
+    "access": "public"
+  },
   "sideEffects": false
 }
