--- a/packages/constants/package.json
+++ b/packages/constants/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "@hypergiant/constants",
+  "name": "@accelint/constants",
   "version": "0.1.0",
   "private": false,
   "license": "Apache-2.0",
   "type": "module",
-  "files": [
-    "dist/**"
-  ],
+  "files": ["dist/**"],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": "./dist/index.js"
@@ -19,8 +17,8 @@
     "lint": "pnpm biome lint ./"
   },
   "devDependencies": {
-    "@hypergiant/typescript-config": "workspace:*",
-    "@hypergiant/vitest-config": "workspace:*",
+    "@accelint/typescript-config": "workspace:*",
+    "@accelint/vitest-config": "workspace:*",
     "@vitest/coverage-istanbul": "^2.1.3",
     "vitest": "^2.1.3"
   },
