--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "@hypergiant/design-system",
+  "name": "@accelint/design-system",
   "version": "0.1.0",
   "private": false,
   "license": "Apache-2.0",
   "type": "module",
-  "files": [
-    "dist/**"
-  ],
+  "files": ["dist/**"],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
@@ -33,9 +31,9 @@
   "devDependencies": {
     "@fontsource/roboto-flex": "^5.1.0",
     "@fontsource/roboto-mono": "^5.1.0",
-    "@hypergiant/biome-config": "workspace:*",
-    "@hypergiant/typescript-config": "workspace:*",
-    "@hypergiant/vitest-config": "workspace:*",
+    "@accelint/biome-config": "workspace:*",
+    "@accelint/typescript-config": "workspace:*",
+    "@accelint/vitest-config": "workspace:*",
     "@ladle/react": "^4.1.2",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-typescript": "^12.1.0",
@@ -58,7 +56,7 @@
     "vitest": "^2.1.3"
   },
   "dependencies": {
-    "@hypergiant/converters": "workspace:*",
+    "@accelint/converters": "workspace:*",
     "@react-aria/collections": "3.0.0-alpha.5",
     "@react-aria/ssr": "^3.9.6",
     "@react-aria/utils": "^3.25.3",
