--- a/packages/geo/package.json
+++ b/packages/geo/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "@hypergiant/geo",
+  "name": "@accelint/geo",
   "version": "0.1.0",
   "private": false,
   "license": "Apache-2.0",
   "type": "module",
-  "files": [
-    "dist/**"
-  ],
+  "files": ["dist/**"],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": "./dist/index.js"
@@ -20,14 +18,14 @@
     "test": "pnpm vitest --run --dir src"
   },
   "devDependencies": {
-    "@hypergiant/typescript-config": "workspace:*",
-    "@hypergiant/vitest-config": "workspace:*",
+    "@accelint/typescript-config": "workspace:*",
+    "@accelint/vitest-config": "workspace:*",
     "@vitest/coverage-istanbul": "^2.1.3",
     "vitest": "^2.1.3"
   },
   "dependencies": {
-    "@hypergiant/converters": "workspace:*",
-    "@hypergiant/predicates": "workspace:*",
+    "@accelint/converters": "workspace:*",
+    "@accelint/predicates": "workspace:*",
     "typescript": "^5.6.3"
   },
   "$schema": "https://json.schemastore.org/package",
