--- a/packages/math/package.json
+++ b/packages/math/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "@hypergiant/math",
+  "name": "@accelint/math",
   "version": "0.1.0",
   "private": false,
   "license": "Apache-2.0",
   "type": "module",
-  "files": [
-    "dist/**"
-  ],
+  "files": ["dist/**"],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": "./dist/index.js"
@@ -20,8 +18,8 @@
     "test": "pnpm vitest --run --dir src"
   },
   "devDependencies": {
-    "@hypergiant/typescript-config": "workspace:*",
-    "@hypergiant/vitest-config": "workspace:*",
+    "@accelint/typescript-config": "workspace:*",
+    "@accelint/vitest-config": "workspace:*",
     "@vitest/coverage-istanbul": "^2.1.3",
     "vitest": "^2.1.3"
   },
