--- a/tooling/biome-config/package.json
+++ b/tooling/biome-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hypergiant/biome-config",
+  "name": "@accelint/biome-config",
   "version": "0.1.0",
   "private": false,
   "license": "Apache-2.0",
