fix: add build before release

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "bench": "turbo bench",
     "build": "turbo build",
     "changeset": "pnpm exec changeset",
-    "changeset:release": "pnpm exec changeset publish",
+    "changeset:release": "pnpm run build && pnpm exec changeset publish",
     "changeset:version": "pnpm exec changeset version",
     "clean": "pnpm run clean:dist && pnpm run clean:turbo && pnpm run clean:pnpm && pnpm run clean:deps",
     "clean:deps": "pnpm -r exec rimraf node_modules && pnpm exec rimraf node_modules",
