--- a/packages/predicates/package.json
+++ b/packages/predicates/package.json
@@ -14,14 +14,13 @@
         "types": "./dist/index.d.ts",
         "default": "./dist/index.js"
       },
-      "default": "./dist/index.js",
-      "module": "./dist/index.js"
+      "default": "./dist/index.js"
     },
     "./package.json": "./package.json"
   },
   "scripts": {
     "bench": "pnpm vitest bench --run --dir src",
-    "build": "pnpm tsc",
+    "build": "pnpm tsup",
     "dev": "pnpm tsc --watch",
     "index": "pnpm zx ../../scripts/indexer.mjs packages/predicates",
     "lint": "pnpm biome lint ./",
@@ -32,6 +31,7 @@
     "@accelint/vitest-config": "workspace:*",
     "@vitest/coverage-istanbul": "^2.1.3",
     "@vitest/web-worker": "^2.1.3",
+    "tsup": "^8.3.0",
     "vitest": "^2.1.3"
   },
   "dependencies": {
