refactor: ds lodash (#82)
* fix: 🐛 lodash imports to not use named exports

* chore: 🤖 add changeset

--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -4,9 +4,7 @@
   "private": false,
   "license": "Apache-2.0",
   "type": "module",
-  "files": [
-    "dist/**"
-  ],
+  "files": ["dist/**"],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
@@ -65,6 +63,7 @@
   },
   "dependencies": {
     "@accelint/converters": "workspace:*",
+    "@accelint/core": "workspace:*",
     "@react-aria/collections": "3.0.0-alpha.5",
     "@react-aria/ssr": "^3.9.6",
     "@react-aria/utils": "^3.25.3",
