--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "indexer": "turbo index",
     "license": "pnpm zx scripts/license.mjs",
     "lint": "turbo lint",
+    "lint:fs": "pnpm ls-lint",
     "test": "turbo test"
   },
   "dependencies": {
@@ -33,7 +34,7 @@
     "@biomejs/biome": "^1.9.3",
     "@changesets/changelog-git": "^0.2.0",
     "@changesets/cli": "^2.27.9",
-    "@ls-lint/ls-lint": "^2.2.3",
+    "@ls-lint/ls-lint": "2.3.0-beta.1",
     "@swc/core": "^1.7.36",
     "rimraf": "^5.0.10",
     "syncpack": "^13.0.0",
