chore: 🤖 split tsup configs

--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -36,7 +36,7 @@
   },
   "scripts": {
     "bench": "pnpm vitest bench --run --dir src",
-    "build": "NODE_OPTIONS=--max_old_space_size=8192 pnpm tsup && rm -rf dist/vanilla.css dist/vanilla.css.map",
+    "build": "rm -rf dist && pnpm tsup --config=tsup.css.config.ts && rm -f dist/index.js && NODE_OPTIONS=--max_old_space_size=8192 pnpm tsup",
     "dev": "pnpm tsc --watch",
     "index": "pnpm zx ../../scripts/indexer.mjs packages/design-system --barrels",
     "lint:todo": "pnpm biome lint ./",
