chore: 🤖 add file extensions to ds build output (#91)
* chore: 🤖 add file extensions to ds build output

* chore: 🤖 readd missing index.css to build output

* chore: 🤖 split tsup configs

* chore: 🤖 fix file extensions for local files

* chore: 🤖 create nextjs testbed for usage validation

* fix: 🐛 omit state from number field render props type

* refactor: 💡 simplify

* chore: 🤖 remove lint task until ready to implement

* chore: 🤖 add changeset

* fix: 🐛 ignore next folder

* fix: 🐛 input width

* test: 💍 add css.ts file to app for implementation test

* fix: 🐛 ls-lint ignore patterns

* chore: 🤖 remove unused dep

--- a/.ls-lint.yml
+++ b/.ls-lint.yml
@@ -15,24 +15,17 @@ ls:
   .*.tsx: kebabcase
 
 ignore:
+  - .changeset
   - .git
-  - .ladle
+  - .github
   - .turbo
   - .vscode
-  - .changeset
-  - .github
-  - __fixtures__
-  - __snapshots__
-  - node_modules
-  - build
-  - dist
-  - coverage
-  - '**/*/.turbo'
-  - '**/*/.ladle'
-  - '**/*/__fixtures__'
-  - '**/*/__snapshots__'
-  - '**/*/node_modules'
-  - '**/*/coverage'
-  - '**/*/dist'
-  - '**/*/build'
-
+  - '**/.next'
+  - '**/.ladle'
+  - '**/.turbo'
+  - '**/__fixtures__'
+  - '**/__snapshots__'
+  - '**/build'
+  - '**/coverage'
+  - '**/dist'
+  - '**/node_modules'
