--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -10,9 +10,7 @@
   "private": false,
   "sideEffects": false,
   "type": "module",
-  "files": [
-    "dist/**"
-  ],
+  "files": ["dist/**"],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
@@ -38,7 +36,7 @@
   },
   "scripts": {
     "bench": "pnpm vitest bench --run --dir src",
-    "build": "pnpm tsup && rm -rf dist/vanilla.css dist/vanilla.css.map",
+    "build": "rm -rf dist && pnpm tsup --config=tsup.css.config.ts && rm -f dist/index.js && NODE_OPTIONS=--max_old_space_size=8192 pnpm tsup",
     "dev": "pnpm tsc --watch",
     "index": "pnpm zx ../../scripts/indexer.mjs packages/design-system --barrels",
     "lint:todo": "pnpm biome lint ./",
@@ -58,10 +56,12 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/lodash": "^4.17.10",
     "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
     "@vanilla-extract/esbuild-plugin": "^2.3.11",
     "@vanilla-extract/vite-plugin": "^4.0.16",
     "@vitest/coverage-istanbul": "^2.1.3",
     "autoprefixer": "^10.4.20",
+    "esbuild-plugin-file-path-extensions": "^2.1.3",
     "esbuild-plugin-lodash": "^1.2.0",
     "jsdom": "^25.0.1",
     "react-test-renderer": "^18.3.1",
