Fix: fixed/pinned versions (#131)
* fix: update rc file

* fix: update synpack

* chore: redo lockfile

* fix: syncpack adjustment and lockfile regen

* fix: issue with downstream dep

* chore: remove redundant prop

--- a/.syncpackrc
+++ b/.syncpackrc
@@ -6,14 +6,9 @@
     "peer",
     "overrides"
   ],
-  "source": [
-    "package.json",
-    "packages/*/package.json",
-    "tooling/*/package.json"
-  ],
   "semverGroups": [
     {
-      "range": "^",
+      "range": "",
       "dependencies": ["**"],
       "packages": ["**"]
     }
