--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -9,33 +9,33 @@
     "test": "pnpm vitest --dir=src"
   },
   "devDependencies": {
-    "@accelint/biome-config": "workspace:0.1.2",
-    "@accelint/typescript-config": "workspace:0.1.2",
-    "@accelint/vitest-config": "workspace:0.1.3",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/node": "^20",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
-    "@vanilla-extract/next-plugin": "^2.4.6",
-    "@vanilla-extract/vite-plugin": "^4.0.16",
-    "@vitest/coverage-istanbul": "^2.1.3",
-    "jsdom": "^25.0.1",
-    "react-test-renderer": "^18.3.1",
-    "typescript": "^5",
-    "vite": "^5.4.9",
-    "vitest": "^2.1.3"
+    "@accelint/biome-config": "workspace:*",
+    "@accelint/typescript-config": "workspace:*",
+    "@accelint/vitest-config": "workspace:*",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/jest-dom": "6.5.0",
+    "@testing-library/react": "16.0.1",
+    "@testing-library/user-event": "14.5.2",
+    "@types/node": "20",
+    "@types/react": "18.3.11",
+    "@types/react-dom": "18.3.1",
+    "@vanilla-extract/next-plugin": "2.4.6",
+    "@vanilla-extract/vite-plugin": "4.0.16",
+    "@vitest/coverage-istanbul": "2.1.3",
+    "jsdom": "25.0.1",
+    "react-test-renderer": "18.3.1",
+    "typescript": "5.6.3",
+    "vite": "5.4.9",
+    "vitest": "2.1.3"
   },
   "dependencies": {
     "@accelint/design-system": "workspace:*",
-    "@vanilla-extract/css": "^1.16.0",
-    "@vanilla-extract/dynamic": "^2.1.2",
-    "clsx": "^2.1.1",
-    "react": "^18.3.1",
-    "react-aria-components": "^1.4.1",
-    "react-dom": "^18.3.1",
-    "next": "15.0.3"
+    "@vanilla-extract/css": "1.16.0",
+    "@vanilla-extract/dynamic": "2.1.2",
+    "clsx": "2.1.1",
+    "next": "15.0.3",
+    "react": "18.3.1",
+    "react-aria-components": "1.4.1",
+    "react-dom": "18.3.1"
   }
 }
