--- a/package.json
+++ b/package.json
@@ -30,19 +30,19 @@
     "test": "turbo test"
   },
   "dependencies": {
-    "@accelint/biome-config": "workspace:0.1.2",
-    "@babel/parser": "^7.25.8",
-    "@biomejs/biome": "^1.9.3",
-    "@changesets/changelog-git": "^0.2.0",
-    "@changesets/cli": "^2.27.9",
+    "@accelint/biome-config": "workspace:*",
+    "@babel/parser": "7.25.8",
+    "@biomejs/biome": "1.9.3",
+    "@changesets/changelog-git": "0.2.0",
+    "@changesets/cli": "2.27.9",
     "@ls-lint/ls-lint": "2.3.0-beta.1",
-    "@swc/core": "^1.7.36",
-    "rimraf": "^5.0.10",
-    "syncpack": "^13.0.0",
-    "taze": "^0.17.2",
-    "tsx": "^4.19.1",
-    "turbo": "^2.1.3",
-    "zx": "^8.1.9"
+    "@swc/core": "1.7.36",
+    "rimraf": "5.0.10",
+    "syncpack": "13.0.0",
+    "taze": "0.17.2",
+    "tsx": "4.19.1",
+    "turbo": "2.1.3",
+    "zx": "8.1.9"
   },
   "$schema": "https://json.schemastore.org/package",
   "author": "https://hypergiant.com",
@@ -51,5 +51,10 @@
     "node": ">=22",
     "pnpm": ">=9"
   },
-  "packageManager": "pnpm@9.12.1"
+  "packageManager": "pnpm@9.12.1",
+  "pnpm": {
+    "overrides": {
+      "@react-types/shared": "3.25.0"
+    }
+  }
 }
