--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -1,14 +1,8 @@
 {
-  "$schema": "https://json.schemastore.org/package",
   "name": "@accelint/design-system",
   "version": "0.4.0",
-  "author": "https://hypergiant.com",
-  "license": "Apache-2.0",
-  "publishConfig": {
-    "access": "public"
-  },
   "private": false,
-  "sideEffects": false,
+  "license": "Apache-2.0",
   "type": "module",
   "files": [
     "dist/**"
@@ -46,61 +40,67 @@
     "preview": "pnpm ladle serve",
     "test": "pnpm vitest --dir=src"
   },
+  "peerDependencies": {
+    "@react-aria/collections": "3.0.0-alpha.5",
+    "@react-aria/dnd": "3.7.4",
+    "@react-aria/focus": "3.18.4",
+    "@react-aria/interactions": "3.22.4",
+    "@react-aria/overlays": "3.23.4",
+    "@react-aria/ssr": "3.9.6",
+    "@react-aria/utils": "3.25.3",
+    "@react-stately/data": "3.11.7",
+    "@react-stately/overlays": "3.6.11",
+    "@react-stately/utils": "3.10.4",
+    "@react-types/shared": "3.25.0",
+    "react": "18.3.1",
+    "react-aria-components": "1.4.1",
+    "react-dom": "18.3.1",
+    "react-querybuilder": "7.7.0"
+  },
   "devDependencies": {
-    "@accelint/biome-config": "workspace:0.1.2",
-    "@accelint/typescript-config": "workspace:0.1.2",
-    "@accelint/vitest-config": "workspace:0.1.3",
-    "@fontsource/roboto-flex": "^5.1.0",
-    "@fontsource/roboto-mono": "^5.1.0",
-    "@ladle/react": "^4.1.2",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/lodash": "^4.17.10",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
-    "@vanilla-extract/esbuild-plugin": "^2.3.11",
-    "@vanilla-extract/vite-plugin": "^4.0.16",
-    "@vitest/coverage-istanbul": "^2.1.3",
-    "autoprefixer": "^10.4.20",
-    "esbuild-plugin-file-path-extensions": "^2.1.3",
-    "esbuild-plugin-lodash": "^1.2.0",
-    "jsdom": "^25.0.1",
-    "postcss": "^8.4.47",
-    "react-test-renderer": "^18.3.1",
-    "tsup": "^8.3.0",
-    "typedoc": "^0.26.11",
-    "typedoc-plugin-markdown": "^4.2.10",
-    "vite": "^5.4.9",
-    "vitest": "^2.1.3"
+    "@accelint/biome-config": "workspace:*",
+    "@accelint/typescript-config": "workspace:*",
+    "@accelint/vitest-config": "workspace:*",
+    "@fontsource/roboto-flex": "5.1.0",
+    "@fontsource/roboto-mono": "5.1.0",
+    "@ladle/react": "4.1.2",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/jest-dom": "6.5.0",
+    "@testing-library/react": "16.0.1",
+    "@testing-library/user-event": "14.5.2",
+    "@types/lodash": "4.17.10",
+    "@types/react": "18.3.11",
+    "@types/react-dom": "18.3.1",
+    "@vanilla-extract/esbuild-plugin": "2.3.11",
+    "@vanilla-extract/vite-plugin": "4.0.16",
+    "@vitest/coverage-istanbul": "2.1.3",
+    "autoprefixer": "10.4.20",
+    "esbuild-plugin-file-path-extensions": "2.1.3",
+    "esbuild-plugin-lodash": "1.2.0",
+    "jsdom": "25.0.1",
+    "postcss": "8.4.47",
+    "react-test-renderer": "18.3.1",
+    "tsup": "8.3.0",
+    "typedoc": "0.26.11",
+    "typedoc-plugin-markdown": "4.2.10",
+    "vite": "5.4.9",
+    "vitest": "2.1.3"
   },
   "dependencies": {
-    "@accelint/converters": "workspace:0.1.3",
-    "@accelint/core": "workspace:0.1.3",
-    "@vanilla-extract/css": "^1.16.0",
-    "@vanilla-extract/dynamic": "^2.1.2",
-    "clsx": "^2.1.1",
-    "lodash": "^4.17.21",
-    "type-fest": "^4.26.1",
-    "typescript": "^5.6.3",
-    "zod": "^3.23.8"
+    "@accelint/converters": "workspace:*",
+    "@accelint/core": "workspace:*",
+    "@vanilla-extract/css": "1.16.0",
+    "@vanilla-extract/dynamic": "2.1.2",
+    "clsx": "2.1.1",
+    "lodash": "4.17.21",
+    "type-fest": "4.26.1",
+    "typescript": "5.6.3",
+    "zod": "3.23.8"
   },
-  "peerDependencies": {
-    "@react-aria/collections": "^3.0.0-alpha.5",
-    "@react-aria/dnd": "^3.7.4",
-    "@react-aria/focus": "^3.18.4",
-    "@react-aria/interactions": "^3.22.4",
-    "@react-aria/overlays": "^3.23.4",
-    "@react-aria/ssr": "^3.9.6",
-    "@react-aria/utils": "^3.25.3",
-    "@react-stately/data": "^3.11.7",
-    "@react-stately/overlays": "^3.6.11",
-    "@react-stately/utils": "^3.10.4",
-    "@react-types/shared": "^3.25.0",
-    "react": "^18.3.1 || ^19.0.0-rc-69d4b800-20241021",
-    "react-aria-components": "^1.4.1",
-    "react-dom": "^18.3.1 || ^19.0.0-rc-69d4b800-20241021",
-    "react-querybuilder": "^7.7.0"
-  }
+  "$schema": "https://json.schemastore.org/package",
+  "author": "https://hypergiant.com",
+  "publishConfig": {
+    "access": "public"
+  },
+  "sideEffects": false
 }
