--- a/packages/temporal/package.json
+++ b/packages/temporal/package.json
@@ -28,17 +28,17 @@
     "test": "pnpm vitest --dir=src"
   },
   "devDependencies": {
-    "@accelint/typescript-config": "workspace:0.1.2",
-    "@accelint/vitest-config": "workspace:0.1.3",
-    "@vitest/coverage-istanbul": "^2.1.3",
-    "esbuild-plugin-file-path-extensions": "^2.1.3",
-    "tsup": "^8.3.0",
-    "typedoc": "^0.26.11",
-    "typedoc-plugin-markdown": "^4.2.10",
-    "vitest": "^2.1.3"
+    "@accelint/typescript-config": "workspace:*",
+    "@accelint/vitest-config": "workspace:*",
+    "@vitest/coverage-istanbul": "2.1.3",
+    "esbuild-plugin-file-path-extensions": "2.1.3",
+    "tsup": "8.3.0",
+    "typedoc": "0.26.11",
+    "typedoc-plugin-markdown": "4.2.10",
+    "vitest": "2.1.3"
   },
   "dependencies": {
-    "typescript": "^5.6.3"
+    "typescript": "5.6.3"
   },
   "$schema": "https://json.schemastore.org/package",
   "author": "https://hypergiant.com",
