--- a/packages/websocket/package.json
+++ b/packages/websocket/package.json
@@ -26,15 +26,15 @@
     "lint": "pnpm biome lint ./"
   },
   "devDependencies": {
-    "@accelint/typescript-config": "workspace:0.1.2",
-    "@accelint/vitest-config": "workspace:0.1.3",
-    "@vitest/coverage-istanbul": "^2.1.3",
-    "esbuild-plugin-file-path-extensions": "^2.1.3",
-    "tsup": "^8.3.0",
-    "vitest": "^2.1.3"
+    "@accelint/typescript-config": "workspace:*",
+    "@accelint/vitest-config": "workspace:*",
+    "@vitest/coverage-istanbul": "2.1.3",
+    "esbuild-plugin-file-path-extensions": "2.1.3",
+    "tsup": "8.3.0",
+    "vitest": "2.1.3"
   },
   "dependencies": {
-    "typescript": "^5.6.3"
+    "typescript": "5.6.3"
   },
   "$schema": "https://json.schemastore.org/package",
   "author": "https://hypergiant.com",
