chore: fix istanbul/vitest oddity (#149)
* chore: specify public-hoist-pattern in nmprc

* chore: remove unnecessary dev deps

--- a/.npmrc
+++ b/.npmrc
@@ -5,3 +5,4 @@ fund=false
 
 # pnpm
 link-workspace-packages=false
+public-hoist-pattern[]=*@vitest/coverage-istanbul* # https://pnpm.io/npmrc#public-hoist-pattern
