--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -4,9 +4,7 @@
   "private": false,
   "license": "Apache-2.0",
   "type": "module",
-  "files": [
-    "dist/**"
-  ],
+  "files": ["dist/**"],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
@@ -73,7 +71,6 @@
     "@types/react-dom": "18.3.1",
     "@vanilla-extract/esbuild-plugin": "2.3.11",
     "@vanilla-extract/vite-plugin": "4.0.16",
-    "@vitest/coverage-istanbul": "2.1.3",
     "autoprefixer": "10.4.20",
     "esbuild-plugin-file-path-extensions": "2.1.3",
     "esbuild-plugin-lodash": "1.2.0",
