--- a/packages/websocket/package.json
+++ b/packages/websocket/package.json
@@ -4,9 +4,7 @@
   "private": false,
   "license": "Apache-2.0",
   "type": "module",
-  "files": [
-    "dist/**"
-  ],
+  "files": ["dist/**"],
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
@@ -28,7 +26,6 @@
   "devDependencies": {
     "@accelint/typescript-config": "workspace:*",
     "@accelint/vitest-config": "workspace:*",
-    "@vitest/coverage-istanbul": "2.1.3",
     "esbuild-plugin-file-path-extensions": "2.1.3",
     "tsup": "8.3.0",
     "vitest": "2.1.3"
