chore: enable lint of design-system package (#158)
* chore: lint design system

* chore: a11y lint errors

* fix: remove accidental change

* chore: props.ts tweaks

--- a/packages/design-system/biome.json
+++ b/packages/design-system/biome.json
@@ -6,7 +6,7 @@
   ],
   "files": {
     "include": ["**/*.js", "**/*.mjs", "**/*.ts", "**/*.tsx", "**/*.json"],
-    "ignore": ["node_modules", ".turbo", "dist", "coverage"]
+    "ignore": ["node_modules", ".turbo", "dist", "coverage", "build"]
   },
   "linter": {
     "rules": {
