chore: better npm support (#159)
* chore: add repository to package.jsons

* chore: stub package readmes

* chore: add repository and readmes for tooling packages

--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "license": "Apache-2.0",
-  "repository": "gohypergiant/standard-toolkit.git",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gohypergiant/standard-toolkit"
+  },
   "scripts": {
     "bench": "turbo bench",
     "build": "turbo build",
