--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -3,6 +3,10 @@
   "version": "0.4.0",
   "private": false,
   "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gohypergiant/standard-toolkit"
+  },
   "type": "module",
   "files": ["dist/**"],
   "types": "./dist/index.d.ts",
