chore: change script name

--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "deps:version-patch": "pnpm taze patch -r",
     "dev": "turbo dev",
     "docs": "turbo docs",
-    "format:imports": "pnpm biome check . --formatter-enabled=false --linter-enabled=false  --organize-imports-enabled=true  --write ",
-    "format": "pnpm run format:imports && pnpm biome format . --write",
+    "format": "pnpm biome format . --write",
     "indexer": "turbo index",
     "license": "pnpm zx scripts/license.mjs",
     "lint": "turbo lint",
     "lint:fs": "pnpm ls-lint",
+    "lint:imports": "pnpm biome check . --formatter-enabled=false --linter-enabled=false  --organize-imports-enabled=true  --write",
     "test": "turbo test"
   },
   "dependencies": {
