chore: lint pre-push too

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -6,6 +6,8 @@ pre-commit:
 
 pre-push:
   commands:
+    lint:
+      run: pnpm run lint
     format:
       run: pnpm run format
       stage_fixed: true
