fix: remove nested biome configs (#204)
* remove nested biome configs

* fix lint commands

* tweak

---------

Co-authored-by: Brandon Pierce <brandonjpierce@users.noreply.github.com>

--- a/biome.json
+++ b/biome.json
@@ -8,5 +8,34 @@
   "files": {
     "include": ["**/*.js", "**/*.mjs", "**/*.ts", "**/*.tsx", "**/*.json"],
     "ignore": ["node_modules", ".turbo", "dist", "build", "coverage"]
-  }
+  },
+  "overrides": [
+    {
+      "include": ["apps/docs/**"],
+      "ignore": [".docusaurus"]
+    },
+    {
+      "include": ["apps/next/**"],
+      "ignore": [".next"]
+    },
+    {
+      "include": ["packages/design-system/**"],
+      "linter": {
+        "rules": {
+          "style": {
+            "useNamingConvention": {
+              "level": "error",
+              "options": {
+                "strictCase": false,
+                "requireAscii": true
+              }
+            },
+            "noParameterAssign": {
+              "level": "warn"
+            }
+          }
+        }
+      }
+    }
+  ]
 }
