--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -37,7 +37,7 @@
     "build": "rm -rf dist && pnpm tsup --config=tsup.css.config.ts && rm -f dist/index.js && NODE_OPTIONS=--max_old_space_size=8192 pnpm tsup",
     "dev": "pnpm tsc --watch",
     "index": "pnpm zx ../../scripts/indexer.mjs packages/design-system --barrels",
-    "lint": "pnpm biome lint ./",
+    "lint": "pnpm biome lint",
     "preview": "pnpm ladle serve",
     "test": "pnpm vitest --dir=src"
   },
