--- a/packages/math/package.json
+++ b/packages/math/package.json
@@ -25,7 +25,7 @@
     "build": "pnpm tsup",
     "dev": "pnpm tsc --watch",
     "index": "pnpm zx ../../scripts/indexer.mjs packages/math",
-    "lint": "pnpm biome lint ./",
+    "lint": "pnpm biome lint",
     "test": "pnpm vitest --dir=src"
   },
   "devDependencies": {
