--- a/tooling/eslint-config/package.json
+++ b/tooling/eslint-config/package.json
@@ -9,7 +9,7 @@
   },
   "type": "module",
   "scripts": {
-    "lint": "pnpm biome lint ./"
+    "lint": "pnpm biome lint"
   },
   "$schema": "https://json.schemastore.org/package",
   "author": "https://hypergiant.com",
