--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -28,8 +28,8 @@
     "@mdx-js/react": "3.0.0",
     "clsx": "2.0.0",
     "prism-react-renderer": "2.3.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "rehype-katex": "7",
     "remark-math": "6",
     "typedoc": "0.27.6",
@@ -37,11 +37,7 @@
     "typescript": "5.6.2"
   },
   "browserslist": {
-    "production": [
-      ">0.5%",
-      "not dead",
-      "not op_mini all"
-    ],
+    "production": [">0.5%", "not dead", "not op_mini all"],
     "development": [
       "last 3 chrome version",
       "last 3 firefox version",
