--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -33,8 +33,8 @@
     "@vanilla-extract/dynamic": "2.1.2",
     "clsx": "2.1.1",
     "next": "15.0.3",
-    "react": "18.3.1",
+    "react": "^18.0.0",
     "react-aria-components": "1.4.1",
-    "react-dom": "18.3.1"
+    "react-dom": "^18.0.0"
   }
 }
