fix: use semver range in react peer dependency (#262)
* fix: use semver range in react peer dependency

* chore: update lockfile

* chore: add changeset

* chore: update version of nextjs example app

--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
   ],
   "files": {
     "include": ["**/*.js", "**/*.mjs", "**/*.ts", "**/*.tsx", "**/*.json"],
-    "ignore": ["node_modules", ".turbo", "dist", "build", "coverage"]
+    "ignore": ["node_modules", ".turbo", "dist", "build", "coverage", ".next"]
   },
   "overrides": [
     {
