feature: event bus (#265)
* feat: bus implementation

* chore: format

* chore: readme fix

* fix: single broadcast channel instance

* feat: tests

* chore: small adjustments

* chore: generator removed license header

* chore: formatting

* chore: formatting

* feat: showcase event bus in next app

* chore: changeset

--- a/packages/bus/package.json
+++ b/packages/bus/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@accelint/temporal",
-  "version": "0.1.0",
+  "name": "@accelint/bus",
+  "version": "0.0.0",
   "private": false,
   "license": "Apache-2.0",
   "repository": {
@@ -24,7 +24,7 @@
     "bench": "pnpm vitest bench --run --dir src",
     "build": "pnpm tsup",
     "dev": "pnpm tsc --watch",
-    "index": "pnpm zx ../../scripts/indexer.mjs packages/temporal",
+    "index": "pnpm zx ../../scripts/indexer.mjs packages/bus",
     "lint": "pnpm biome lint",
     "test": "pnpm vitest --dir=src"
   },
@@ -33,7 +33,8 @@
     "@accelint/vitest-config": "workspace:*",
     "esbuild-plugin-file-path-extensions": "2.1.3",
     "tsup": "8.3.0",
-    "vitest": "2.1.3"
+    "vitest": "2.1.3",
+    "vitest-broadcast-channel-mock": "0.1.0"
   },
   "dependencies": {
     "typescript": "5.6.3"
