--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -28,6 +28,7 @@
     "vitest": "2.1.3"
   },
   "dependencies": {
+    "@accelint/bus": "workspace:*",
     "@accelint/design-system": "workspace:*",
     "@vanilla-extract/css": "1.16.0",
     "@vanilla-extract/dynamic": "2.1.2",
